--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -10,8 +10,98 @@
 @import url('./container.css');
 @import url('./animations.css');
 
-/* Sections style */
-@import url('./header.css');
-@import url('./badges.css');
-@import url('./back-link.css');
-@import url('./footer.css');
+.gallery {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 20px 24px;
+  padding: 24px;
+  max-width: 1158px;
+  margin: 0 auto;
+}
+
+.gallery li {
+  display: flex;
+  flex-basis: calc((100% - 24px * 2) / 3);
+  transition: transform 300ms ease-in-out;
+}
+
+.gallery li:hover {
+  transform: scale(1.05);
+}
+
+.feedback-form {
+  display: flex;
+  flex-direction: column;
+  max-width: 408px;
+  padding: 25px;
+}
+
+.feedback-form label {
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+
+.feedback-form input {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 100%;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  background-color: transparent;
+  padding: 8px 16px;
+  cursor: pointer;
+  margin-top: 8px;
+}
+
+.feedback-form textarea {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 100%;
+  height: 80px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+  background-color: transparent;
+  padding: 8px 16px;
+  cursor: pointer;
+  resize: none;
+  margin-top: 8px;
+}
+
+.feedback-form button {
+  display: block;
+  padding: 8px 16px;
+  border-radius: 8px;
+  border: none;
+  min-width: 95px;
+  width: 95px;
+  height: 40px;
+  background-color: #4e75ff;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  cursor: pointer;
+  margin-top: 16px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.feedback-form button:hover,
+.feedback-form button:focus {
+  background: #6c8cff;
+}
